--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #21D0B2;
+    background-color: #062f7a;
     overflow: hidden;
   }
   
@@ -7,7 +7,7 @@
   .navbar a {
     float: left;
     display: block;
-    color: #062f7a;
+    color: #1DCDFE;
     text-align: center;
     padding: 14px 19px;
     text-decoration: none;
@@ -16,13 +16,13 @@
   
   /* Change the color of links on hover */
   .navbar a:hover {
-    background-color: #ddd;
-    color: #2F455C;
+    background-color: rgb(32, 30, 30);
+    color: #ffffff;
   }
   
   /* Add an active class to highlight the current page */
   .navbar a.active {
-    background-color: #04AA6D;
+    background-color: #a6b3ae;
     color: white;
   }
 
@@ -32,4 +32,28 @@
     font-weight: bold;
 
 }
+
+.btn {
+  display: block;
+  width: 70%;
+  height: 70%;
+  font-weight: bold;
+  margin-left: 240px;
+  padding: 28px 28px;
+  border-color: rgb(14, 13, 13);
+  background-origin: padding-box;
+  border-width: 2px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  box-shadow: 0 9px #999;
+}
+.btn:hover {background-color: #656072}
+
+.btn:active {
+  background-color: #d19a66;
+  box-shadow: 0 5px rgb(189, 94, 94);
+  transform: translateY(4px);
+}
+
   
