--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
   width: 25%;
   height: 20%;
   font-weight: bold;
+  border-radius: 3em;
   margin-left: 550px;
   margin-top: 250px;
   padding: 28px 28px;
@@ -104,6 +105,7 @@ a.animated-button.thar-four:before {
 	top: 0px;
 	left: 0px;
 	height: 100%;
+  border-radius: 3em;
 	width: 0px;
 	z-index: -1;
 	content: '';
