--- a/css/button.scss
+++ b/css/button.scss
@@ -1,8 +1,8 @@
 $icon-size	  : 60px;
 $border-radius: 0.1;//15% = 0.15, 50% = 0.50 etc.
 
-$background   : #4d4d53;
-$background-b : #4d4d53;
+$background   : #2d2c3e;
+$background-b : #2d2c3e;
 
 // Icon Colors
 $green        : #16A085;
