--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -63,10 +63,13 @@
                 <a href="guidelines.html" class="nav-link text-white font-weight-bold">GUIDELINES</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link text-white font-weight-bold">ABOUT COVID</a>
+                <a href="" class="nav-link text-white font-weight-bold">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a href="" class="nav-link text-white font-weight-bold">STATUS</a>
+            </li>
+            <li class="nav-item">
+                <a href="" class="nav-link text-white font-weight-bold">HELP</a>
             </li>
             <li class="nav-item">
                 <a href="Form.html" class="nav-link text-white font-weight-bold">CONTACT</a>
