--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -60,7 +60,7 @@
                 <a href="" class="nav-link text-white font-weight-bold">HOME</a>
             </li>
             <li class="nav-item">
-                <a href="guidelines.html" class="nav-link text-white font-weight-bold">GUIDELINES</a>
+                <a href="guidelines.hbs" class="nav-link text-white font-weight-bold">GUIDELINES</a>
             </li>
             <li class="nav-item">
                 <a href="" class="nav-link text-white font-weight-bold">ABOUT</a>
@@ -72,7 +72,7 @@
                 <a href="" class="nav-link text-white font-weight-bold">HELP</a>
             </li>
             <li class="nav-item">
-                <a href="Form.html" class="nav-link text-white font-weight-bold">CONTACT</a>
+                <a href="Form.hbs" class="nav-link text-white font-weight-bold">CONTACT</a>
             </li>
         </ui>
     </div>
