--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -72,7 +72,7 @@
                 <a href="" class="nav-link text-white font-weight-bold">HELP</a>
             </li>
             <li class="nav-item">
-                <a href="Form.hbs" class="nav-link text-white font-weight-bold">CONTACT</a>
+                <a href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS" class="nav-link text-white font-weight-bold">CONTACT</a>
             </li>
         </ui>
     </div>
