--- a/public/view/guidelines.hbs
+++ b/public/view/guidelines.hbs
@@ -11,6 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body> 
+    {{>header}}
     <div class="about text-center">
         <h1>Guidelines</h1>
     </div>
@@ -116,5 +117,5 @@
             
             </div>
         </div> 
-
+{{>footer}}
 </body>
