--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -124,7 +124,7 @@
 </div> 
 
 <!-- Covid Status !-->
-<div class="status">
+<div id="status">
   <div class="container py-2">
     <h1 class="head text-center bg-success text-white">COVID'19 STATUS</h1>
     <div class="row p-md-3 px-md-1">
