--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -18,7 +18,7 @@
                 <a href="about" class="nav-link text-white font-weight-bold">ABOUT</a>
             </li>
             <li class="nav-item">
-                <a href="status" class="nav-link text-white font-weight-bold">STATUS</a>
+                <a href="#status" class="nav-link text-white font-weight-bold">STATUS</a>
             </li>
             <li class="nav-item">
                 <a href="" class="nav-link text-white font-weight-bold">HELP</a>
