--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -298,11 +298,13 @@ box for covid status */
 }
 
 /* Sliding image */
-@media screen and (max-width: 900px) and (min-width: 600px), (min-width: 1100px) {
-  div.carousel-item {
+@media screen and (max-width: 900px) and (min-width: 300px) {
+  .img {
     font-size: 50px;
     /* padding: 50px;
    border: 8px solid black; */
+   width:100%;
+   height:600px;
     background: yellow;
   }
 }
