--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -68,42 +68,42 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="static/images/7.jpg" alt="Los Angeles" width="100%" height="600px">
+        <img class="img" src="static/images/7.jpg" alt="Los Angeles" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static/images/2.jpg" alt="Chicago" width="100%" height="600px">
+        <img class="img" src="static/images/2.jpg" alt="Chicago" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static/images/3.jpg" alt="New York" width="100%" height="600px">
+        <img class="img" src="static/images/3.jpg" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static/images/4.jpg" alt="New York" width="100%" height="600px">
+        <img class="img" src="static/images/4.jpg" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static/images/5.jpg" alt="New York" width="100%" height="600px">
+        <img class="img" src="static/images/5.jpg" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="static/images/6.jpg" alt="New York" width="100%" height="600px">
+        <img class="img" src="static/images/6.jpg" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
