--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -298,13 +298,18 @@ box for covid status */
 }
 
 /* Sliding image */
-@media screen and (max-width: 900px) and (min-width: 300px) {
-  .img {
+@media screen and (max-width: 650px) and (min-width: 300px) {
+  div.carousel-item {
+height : 40vh;
     font-size: 50px;
     /* padding: 50px;
    border: 8px solid black; */
-   width:100%;
-   height:600px;
     background: yellow;
   }
+}
+
+.img{
+  width:100%;
+  min-height: 300px;
+  max-height: 600px;
 }
