--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -40,7 +40,6 @@
    <div class="bgimg overflow-hidden">
   <!-- <body data-spy="scroll" data-target=".navbar" data-offset="50"> -->
    {{>header}}
-    <br>
     <!-- GET STARTED BUTTON -->
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
@@ -125,8 +124,8 @@
 
 <!-- Covid Status !-->
 <div id="status">
-  <div class="container py-2">
-    <h1 class="head text-center bg-success text-white">COVID'19 STATUS</h1>
+  <div class="container">
+    <h1 class="head text-center bg-success text-white font-weight-bold">COVID'19 STATUS</h1>
     <div class="row p-md-3 px-md-1">
       <div class="  col-md-6" style="background-color:yellow; height: 400px;">
       <p class="in_world text-center font-weight-bold">WORLD</p>
