--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -1,32 +1,30 @@
- <nav class="navbar navbar-expand-md  py-1 ">
-
-      <!-- Brand -->
-      <a class="navbar-brand font-weight-bold " href="#" style="font-size: 2.5em;">COVID 19</a>
-
-      <button class = "navbar-toggler" type="button" data-toggle="collapse" style="color : hsl(0, 0%, 100%), background-color: hsl(0, 0%, 100%) !important" data-target="#collapsenavbar">
-        <span class="navbar-toggler-icon">--</span>
-      </button>
-      <div class="navbar-collapse text-center text-white" id="collapsenavbar">
-        <ui class="navbar-nav ml-auto py-3">
-            <li class="nav-item">
-                <a href="home" class="nav-link text-white font-weight-bold">HOME</a>
-            </li>
-            <li class="nav-item">
-                <a href="guidelines" class="nav-link text-white font-weight-bold">GUIDELINES</a>
-            </li>
-            <li class="nav-item">
-                <a href="about" class="nav-link text-white font-weight-bold">ABOUT</a>
-            </li>
-            <li class="nav-item">
-                <a href="#status" class="nav-link text-white font-weight-bold">STATUS</a>
-            </li>
-            <li class="nav-item">
-                <a href="" class="nav-link text-white font-weight-bold">HELP</a>
-            </li>
-            <li class="nav-item">
-                <a href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS" class="nav-link text-white font-weight-bold">CONTACT</a>
-            </li>
-        </ui>
+<nav class="navbar navbar-expand-md navbar-dark sticky-top m-0" style="overflow: hidden;">
+    <a class="navbar-brand text-white font-weight-bolder" href="#">
+      COVID'19
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="home">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="guidelines">GUIDELINES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="about">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="#status">STATUS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="">HELP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
+        </li>
+      </ul>
     </div>
-      
-    </nav>
+  </nav>
