--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,13 +1,13 @@
 *{
   padding: 1px;
-  
 }
 .bgimg{
   background-image: url('/static/images/img.jpg');
   background-size: 100% 100%;
   background-attachment: fixed;
-  width: 100%;
-  height: 760px;
+  width:100%;
+  min-height: 300px;
+  max-height: 760px;
 }
 
 .navbar {
