--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -1,3 +1,10 @@
+  <!-- font awesome -->
+
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css'>
+      <link href='//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css' rel='stylesheet'/>
+
+
 <div class="footer py-1">
   <footer id="footer" class="footer-1">
   <div class="main-footer widgets-dark typo-light">
