--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -14,7 +14,7 @@
     <div class="col-xs-12 col-sm-6 col-md-3">
   <div class="widget subscribe no-box">
   <h5 class="widget-title">ABOUT <span></span></h5>
-  <p>little description will be here </p>
+  <p>This website is made by Anubhav Gupta, Kishan Kumar and Pranjali Priya to help people during COVID19. </p>
   </div>
   </div>
   
@@ -24,10 +24,10 @@
   <h5 class="widget-title">Reference Links<span></span></h5>
   <ul class="thumbnail-widget">
   <li>
-  <div class="thumb-content"><a href="#.">&nbsp;LINK 1</a></div> 
+  <div class="thumb-content"><a href="https://www.mohfw.gov.in/">&nbsp;Indian Govt Website</a></div> 
   </li>
   <li>
-  <div class="thumb-content"><a href="#.">&nbsp;LINK 2</a></div> 
+  <div class="thumb-content"><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">&nbsp;WHO Website</a></div> 
   </li>
   <li>
   </ul>
