--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -35,7 +35,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <title>Covid19</title>
+  <title>CovidaSolutions</title>
 </head>
 
 <body>
