--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -36,11 +36,11 @@
 
   <div class="col-xs-12 col-sm-6 col-md-3">
   <div class="widget no-box">
-  <h5 class="widget-title">Follow up<span></span></h5>
-              <a href="#"> <i class="fa fa-facebook"> </i> </a>
-              <a href="#"> <i class="fa fa-twitter"> </i> </a>
-              <a href="#"> <i class="fa fa-youtube"> </i> </a>
-              <a href="#"> <i class="fa fa-linkedin-in"></i></a>
+  <h5 class="widget-title">More Informatiom<span></span></h5>
+              <a href="https://www.facebook.com/coronavirus_info"> <i class="fa fa-facebook"> </i> </a>
+              <a href="https://twitter.com/search?q=%23covid19india&src=typed_query"> <i class="fa fa-twitter"> </i> </a>
+              <a href="https://www.youtube.com/results?search_query=covid+19+india"> <i class="fa fa-youtube"> </i> </a>
+              <a href="https://www.instagram.com/explore/tags/covid19india/?hl=en"> <i class="fa fa-instagram"></i></a>
   </div>
   </div>
   <br>
