--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark sticky-top m-0" style="overflow: hidden;">
-    <a class="navbar-brand text-white font-weight-bolder" href="#">
-      COVID'19
+    <a class="navbar-brand text-white font-weight-bolder " style="font-size: 25px;" >
+      Covid Solutions
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -8,22 +8,22 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="home">HOME</a>
+          <a class="nav-link font-weight-bold text-white " href="home">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="guidelines">GUIDELINES</a>
+          <a class="nav-link font-weight-bold text-white " href="guidelines">GUIDELINES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="about">ABOUT</a>
+          <a class="nav-link font-weight-bold text-white " href="about">ABOUT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="#status">STATUS</a>
+          <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="">HELP</a>
+          <a class="nav-link font-weight-bold text-white " href="">HELP</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
+          <a class="nav-link font-weight-bold text-white" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
         </li>
       </ul>
     </div>
