--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -11,16 +11,16 @@
           <a class="nav-link font-weight-bold text-white " href="home">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="guidelines">GUIDELINES</a>
+          <a class="nav-link font-weight-bold text-white " href="content">GUIDELINES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="about">ABOUT</a>
+          <a class="nav-link font-weight-bold text-white " href="aboutcovid">ABOUT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="">HELP</a>
+          <a class="nav-link font-weight-bold text-white " href="helpsection">HELP</a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
