--- a/public/view/guidelines.hbs
+++ b/public/view/guidelines.hbs
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../static/css/guidelines.css">
 </head>
 <body> 
     {{>header}}
@@ -17,8 +18,12 @@
     </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 py-5">
-                    <h3>Protection measures for everyone</h3>
+                 <div class="col-lg-12 mx-auto">
+                   <div class="card">
+                     <div class="card-body">
+                       <div class="row">
+                        <div class="col-sm-12 py-2">
+                    <h2>Protection measures for everyone</h2>
                     <p>Stay aware of the latest information on the COVID-19 outbreak,
                         available on the national,state and local public health authority. Many
                         countries around the world have seen cases of COVID-19 and several
@@ -84,9 +89,9 @@
 
                     </p>
 
-                    <h3> Protection measures for persons who are in or have recently visited (past
+                    <h2> Protection measures for persons who are in or have recently visited (past
                         14 days) areas where COVID-19 is spreading
-                    </h3>
+                    </h2>
                     <p>
                         • Follow the guidance outlined above (Protection measures for
                         everyone)
@@ -111,10 +116,11 @@
                          direct you to the right health facility. This will also help to prevent
                          possible spread of COVID-19 and other viruses.
                     </p>
-
-                    
+                    </div>
+                    </div>
+                  </div>  
                 </div>
-            
+              </div>
             </div>
         </div> 
 {{>footer}}
