--- a/public/partials/footer.hbs
+++ b/public/partials/footer.hbs
@@ -50,9 +50,10 @@
   <h5 class="widget-title">Contact Us<span></span></h5>
               <p>Subscribe to our Newsletter</p>
     <div class="emailfield">
+  <form action="subscribe" method="POST">
   <input type="text" name="email" value="Email">
-  <input name="uri" type="hidden" value="arabiantheme">
-  <input name="loc" type="hidden" value="en_US">
+  {{!-- <input name="uri" type="hidden" value="arabiantheme">
+  <input name="loc" type="hidden" value="India"> --}}
   <input class="submitbutton ripplelink" type="submit" value="Subscribe">
   </form>  
   </div>
