--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -11,7 +11,7 @@
           <a class="nav-link font-weight-bold text-white " href="home">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="content">GUIDELINES</a>
+          <a class="nav-link font-weight-bold text-white " href="guidelines">GUIDELINES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white " href="aboutcovid">ABOUT</a>
