--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -45,7 +45,7 @@
     <!-- GET STARTED BUTTON -->
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
-      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="getAPIResponse"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; "><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
+      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="https://covidwarriors.gov.in/covid_Hospital_statewise.aspx?orgid=59"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; "><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
     </div>
     <!-- GET STARTED BUttON END -->
