--- a/public/view/aboutcovid.hbs
+++ b/public/view/aboutcovid.hbs
@@ -14,7 +14,7 @@
         <p>COVID-19 is the infectious disease caused by the most recently
           discovered corona virus. This new virus and disease were unknown
           before the outbreak began in Wuhan, China, in December 2019.</p>
-        <a href="covidtile" class="btn1">Covid 19</a>
+        <a href="new" class="btn1">Covid 19</a>
       </div>
       <div class="bg"></div>
     </div>
