--- a/public/view/helpsection.hbs
+++ b/public/view/helpsection.hbs
@@ -8,9 +8,12 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/helpsection.css">
+    <link rel="stylesheet" href="../partials/">
+    <link rel="stylesheet" href="../static/css/">
     <title>helpsection</title>
 </head>
 <body>
+    {{>header}}
 <!------ Include the above in your HEAD tag ---------->
 <div id="home_quicklinks">
                                 <a class="quicklink link1" href="#">
