--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -45,7 +45,7 @@
     <!-- GET STARTED BUTTON -->
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
-      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="https://covidwarriors.gov.in/covid_Hospital_statewise.aspx?orgid=59"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; "><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
+      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="https://covidwarriors.gov.in/covid_Hospital_statewise.aspx?orgid=59"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; color:aliceblue; background-color: #181817;"><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
     </div>
     <!-- GET STARTED BUttON END -->
@@ -69,42 +69,42 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="img" src="static/images/7.jpg" alt="Los Angeles" >
+        <img class="img" src="static/images/7.png" alt="Los Angeles" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="img" src="static/images/2.jpg" alt="Chicago" >
+        <img class="img" src="static/images/2.png" alt="Chicago" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="img" src="static/images/3.jpg" alt="New York" >
+        <img class="img" src="static/images/31.png" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="img" src="static/images/4.jpg" alt="New York" >
+        <img class="img" src="static/images/4.png" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="img" src="static/images/5.jpg" alt="New York" >
+        <img class="img" src="static/images/5.png" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
         </div>
       </div>
       <div class="carousel-item">
-        <img class="img" src="static/images/6.jpg" alt="New York" >
+        <img class="img" src="static/images/6.png" alt="New York" >
         <div class="carousel-caption">
           <h3></h3>
           <p></p>
@@ -127,9 +127,9 @@
 <!-- Covid Status !-->
 <div id="status">
   <div class="container">
-    <h1 class="head text-center bg-success text-white font-weight-bold">COVID'19 STATUS</h1>
+    <h1 class="head text-center  text-white font-weight-bold" style="background-color:rgb(6, 165, 142);">COVID'19 STATUS</h1>
     <div class="row p-md-3 px-md-1">
-      <div class="  col-md-6" style="background-color:yellow; height: 400px;">
+      <div class="  col-md-6" style="background-color:rgb(0, 255, 174); height: 400px;">
       <p class="in_world text-center font-weight-bold">WORLD</p>
       <p class="world_status text-center">Active: {{WorldActive}} </p>
       <p class="world_status text-center">Last Update: {{WorldLastUpdate}} </p>
@@ -138,8 +138,8 @@
       <p class="world_status text-center">Total Deaths: {{WorldTotalDeaths}} </p>
       <p class="world_status text-center">Total Recovered: {{WorldRecoveredCases}} </p>
       </div>
-      <div class=" col-md-6" style="background-color:rgb(128, 134, 253); height: 400px;">
-        <p class='in_india text-center font-weight-bold'>IN INDIA</p>
+      <div class=" col-md-6" style="background-color:rgba(12, 240, 168, 0.857); height: 400px;">
+        <p class='in_india text-center font-weight-bold'>INDIA</p>
         <p class="world_status text-center">Active: {{IndiaActive}} </p>
         <p class="world_status text-center">Last Update: {{IndiaLastUpdate}} </p>
         <p class="world_status text-center">New Cases: {{IndiaNewCases}} </p>
