--- a/public/view/helpsection.hbs
+++ b/public/view/helpsection.hbs
@@ -15,33 +15,36 @@
 <body>
     {{>header}}
 <!------ Include the above in your HEAD tag ---------->
-<div id="home_quicklinks">
-                                <a class="quicklink link1" href="#">
-                                    <span class="ql_caption">
-                                        <span class="outer">
-                                            <span class="inner">
-                                                <h2>Help each other</h2>
-                                            </span>
-                                        </span>
-                                    </span>
-                                    <span class="ql_top"></span>
-                                    <span class="ql_bottom"></span>
-                                </a>
-
-                                <a class="quicklink link2" href="#">
-                                    <span class="ql_caption">
-                                        <span class="outer">
-                                            <span class="inner">
-                                                <h2>Organisations For Help</h2>
-                                            </span>
-                                        </span>
-                                    </span>
-                                    <span class="ql_top"></span>
-                                    <span class="ql_bottom"></span>
-                                </a>
-                                <div class="clear"></div>
-                            </div>
-      
+<div class="row">
+    <div class="col-6">
+        <div id="home_quicklinks">
+            <a class="quicklink link1" href="commentbox">
+            <span class="ql_caption">
+            <span class="outer">
+            <span class="inner">
+            <h2>Help each other</h2>
+            </span>
+            </span>
+            </span>
+            <span class="ql_top"></span>
+            <span class="ql_bottom"></span>
+            </a>
+        </div>
+            <div id="home_quicklinks">
+            <a class="quicklink link2" href="#">
+            <span class="ql_caption">
+            <span class="outer">
+            <span class="inner">
+            <h2>Organisations For Help</h2>
+            </span>
+            </span>
+            </span>
+            <span class="ql_top"></span>
+            <span class="ql_bottom"></span>
+            </a>
+         </div>
+    </div>
 </div>
+
 </body>
 </html>
