--- a/public/view/commentbox.hbs
+++ b/public/view/commentbox.hbs
@@ -38,36 +38,7 @@
 </head>
 <body>
   <div class="bg" style="background-color: rgb(24, 236, 165);">
-    <nav class="navbar navbar-expand-md navbar-dark sticky-top m-0" style="overflow: hidden;">
-        <a class="navbar-brand text-white font-weight-bolder " style="font-size: 25px;" >
-          Covid Solutions
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white " href="home">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white " href="content">GUIDELINES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white " href="aboutcovid">ABOUT</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white " href="helpsection">HELP</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link font-weight-bold text-white" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    {{>header}}
     <!-- Main Body -->
     <section>
         <div class="container">
