--- a/public/view/helpsection.hbs
+++ b/public/view/helpsection.hbs
@@ -16,7 +16,7 @@
     {{>header}}
 <!------ Include the above in your HEAD tag ---------->
 <div class="row">
-    <div class="col-6">
+
         <div id="home_quicklinks">
             <a class="quicklink link1" href="commentbox">
             <span class="ql_caption">
@@ -30,6 +30,20 @@
             <span class="ql_bottom"></span>
             </a>
         </div>
+            <div id="home_quicklinks">
+            <a class="quicklink link2" href="#">
+            <span class="ql_caption">
+            <span class="outer">
+            <span class="inner">
+            <h2>Organisations For Help</h2>
+            </span>
+            </span>
+            </span>
+            <span class="ql_top"></span>
+            <span class="ql_bottom"></span>
+            </a>
+         </div>
+         
             <div id="home_quicklinks">
             <a class="quicklink link2" href="#">
             <span class="ql_caption">
