--- a/public/view/mentalhelporg.html
+++ b/public/view/mentalhelporg.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
-<body> 
+<body style="background-color: rgb(233, 200, 163);"> 
     <div class="about text-center"> <h1> These NGOs are helping people deal with mental health issues amid the coronavirus pandemic</h1></div>
          <div class="col-sm-8 py-2">
         
