--- a/public/view/aboutcovid.hbs
+++ b/public/view/aboutcovid.hbs
@@ -20,8 +20,16 @@
     </div>
     <div class="card">
       <div class="box box2">
-        <p> Along with covid, there are various type of fungus that are spreading.</p>
+        <p> Along with covid, there are various type of fungus that are spreading. On coming in touch, the fungus can stick to a body part, and after a point travel inward through the nose, sinus or lungs.
+</p>
         <a href="fungus" class="btn1">Fungus</a>
+      </div>
+      <div class="bg"></div>
+    </div>
+    <div class="card">
+      <div class="box box2">
+        <p> Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. </p>
+        <a href="fungus" class="btn1">Post Covid</a>
       </div>
       <div class="bg"></div>
     </div>
