--- a/public/view/helpsection.hbs
+++ b/public/view/helpsection.hbs
@@ -8,57 +8,51 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/helpsection.css">
-    <link rel="stylesheet" href="../partials/">
-    <link rel="stylesheet" href="../static/css/">
     <title>helpsection</title>
 </head>
 <body>
-    {{>header}}
 <!------ Include the above in your HEAD tag ---------->
-<div class="row">
+<div class="container">
+         <div id="home_quicklinks">
+                                <a class="quicklink link1" href="#">
+                                    <span class="ql_caption">
+                                        <span class="outer">
+                                            <span class="inner">
+                                                <h2>Help each other</h2>
+                                            </span>
+                                        </span>
+                                    </span>
+                                    <span class="ql_top"></span>
+                                    <span class="ql_bottom"></span>
+                                </a>
 
-        <div id="home_quicklinks">
-            <a class="quicklink link1" href="commentbox">
-            <span class="ql_caption">
-            <span class="outer">
-            <span class="inner">
-            <h2>Help each other</h2>
-            </span>
-            </span>
-            </span>
-            <span class="ql_top"></span>
-            <span class="ql_bottom"></span>
-            </a>
-        </div>
-            <div id="home_quicklinks">
-            <a class="quicklink link2" href="#">
-            <span class="ql_caption">
-            <span class="outer">
-            <span class="inner">
-            <h2>Organisations For Help</h2>
-            </span>
-            </span>
-            </span>
-            <span class="ql_top"></span>
-            <span class="ql_bottom"></span>
-            </a>
-         </div>
-         
-            <div id="home_quicklinks">
-            <a class="quicklink link2" href="#">
-            <span class="ql_caption">
-            <span class="outer">
-            <span class="inner">
-            <h2>Organisations For Help</h2>
-            </span>
-            </span>
-            </span>
-            <span class="ql_top"></span>
-            <span class="ql_bottom"></span>
-            </a>
-         </div>
-    </div>
+                                <a class="quicklink link2" href="org">
+                                    <span class="ql_caption">
+                                        <span class="outer">
+                                            <span class="inner">
+                                                <h2>Covid Relief Organisations</h2>
+                                            </span>
+                                        </span>
+                                    </span>
+                                    <span class="ql_top"></span>
+                                    <span class="ql_bottom"></span>
+                                </a>
+
+
+                                <a class="quicklink link3" href="mentalhelporg">
+                                    <span class="ql_caption">
+                                        <span class="outer">
+                                            <span class="inner">
+                                                <h2>Mental Help Organisations</h2>
+                                            </span>
+                                        </span>
+                                    </span>
+                                    <span class="ql_top"></span>
+                                    <span class="ql_bottom"></span>
+                                </a>                
+                  <div class="clear"></div>                         
+          </div>     
 </div>
-
+</body>
 </body>
 </html>
