--- a/public/static/css/tile.css
+++ b/public/static/css/tile.css
@@ -1,5 +1,8 @@
 body{
-    margin: 0;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
     padding: 0;
     background: #262626;
     font-family: sans-serif;
