--- a/public/view/vaccine.hbs
+++ b/public/view/vaccine.hbs
@@ -1,109 +1,109 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Vaccination</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../static/css/vaccine.css">
-</head>
-<body> 
-    <div class="about text-center">
-         <div class="col-sm-12 py-5">
-        <h1>What to do before, during and after getting vaccinated for COVID-19</h1>
+
+<!DOCTYPE HTML>
+<html lang="en-US">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="../static/css/vaccine.css">
+      <title>Vaccination</title>
+   </head>
+   <body>
+
+      <div class="section-container">
+         <div class="columns image" style="background-image:url('../static/images/front.jpeg')">
+            &nbsp;
          </div>
-    </div>
-        <div class="container">
-            <div class="row">
-                 <div class="col-lg-12 mx-auto">
-                   <div class="card">
-                     <div class="card-body">
-                       <div class="row">
-                        <div class="col-sm-12 py-2">
-                          <img class="imgs1" src="../static/images/front.jpeg">
-                           <div class="col-sm-12 py-5">
-                    <p>
-                       Getting vaccinated is a massive moment for you, your family, community and the world.
-                    </p>
-                    <p>
-                        But it can also be stressful, especially if you’ve been isolating at home for many months, 
-                        or are worried about vaccination.
-                    </p>
-                    <P>It can be useful to remember that by getting vaccinated you are not only protecting yourself from COVID-19,
-                       but also your loved ones around you. 
-                    </P>
-                    
-                  <div class="about text-center">
-                     <div class="col-sm-12 py-5">
-                         <h1>Before Vaccination</h1>
-                     </div>
-                  </div>
-                  <img class="imgs" src="../static/images/before vaccination.jpeg">
-                  <h2>Do your research</h2>
-                  <p>
-                     • Learn more about the different types of COVID-19 vaccines and how they work and how
-                       vaccinations are being rolled out in South Asia.
+         <div class="columns content">
+            <div class="content-container">
+               <h1>What to do before, during and after getting vaccinated for COVID-19</h1>
+               <p>
+                  Getting vaccinated is a massive moment for you, your family, community and the world.
+               </p>
+               <p>
+                   But it can also be stressful, especially if you’ve been isolating at home for many months, 
+                   or are worried about vaccination.
+               </p>
+               <P>It can be useful to remember that by getting vaccinated you are not only protecting yourself from COVID-19,
+                  but also your loved ones around you.
+               </p>
+            </div>
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns content">
+            <div class="content-container">
+               <h1>Before Vaccination</h1>
+                 <h5>Do your research</h5>
+               <p>
+                  • Learn more about the different types of COVID-19 vaccines and how they work and how
+                  vaccinations are being rolled out in South Asia.
+             </p>
+             <p>
+                • Make sure you’re relying on accurate vaccine information by checking that it comes from a trustworthy source,
+                  like your Ministry of Health, WHO or UNICEF.
+             </p>
+             <p>
+                • Cross-check vaccine information that you find online, particularly if it comes from unknown sources.
+             </p>
+             <p>
+                • If you have any doubts, talk to staff at your nearest Health Facility, or a health worker.
+                
+               </p>
+               <h5>Prepare Your Things</h5>
+               <p>
+                  Make sure you have:
+               </p>
+               <p>
+                   • A mask that covers your nose and mouth - and fits tightly and comfortably.
+               </p>
+               <p>
+                   • Hand sanitizer.
+               </p>
+               <p>
+                   • The notification you received about your appointment.
+               </p>
+               <p>
+                   • Your ID (as appropriate for your country).
+               </p>
+                <p>
+                   • A travel plan, to get to your appointment on time.
                   </p>
                   <p>
-                     • Make sure you’re relying on accurate vaccine information by checking that it comes from a trustworthy source,
-                       like your Ministry of Health, WHO or UNICEF.
+                      Wear loose or short sleeves that can be rolled up easily, so that health workers have easy access to your arm.
                   </p>
                   <p>
-                     • Cross-check vaccine information that you find online, particularly if it comes from unknown sources.
-                  </p>
-                  <p>
-                     • If you have any doubts, talk to staff at your nearest Health Facility, or a health worker. 
-                  </p>
-                  <h2>Prepare your things</h2>
-                  <p>
-                      Make sure you have:
-                  </p>
-                  <p>
-                      • A mask that covers your nose and mouth - and fits tightly and comfortably.
-                  </p>
-                  <p>
-                      • Hand sanitizer.
-                  </p>
-                  <p>
-                      • The notification you received about your appointment.
-                  </p>
-                  <p>
-                      • Your ID (as appropriate for your country).
-                  </p>
-                   <p>
-                      • A travel plan, to get to your appointment on time.
-                     </p>
-                     <p>
-                         Wear loose or short sleeves that can be rolled up easily, so that health workers have easy access to your arm.
-                     </p>
-                     <p>
-                         Tell your health provider, or vaccinator, if you have any health issues or are taking any medications,
-                          including any pain killers.
-                     </p>
-                     <h2>Cancel your appointment if you have COVID-19 or the symptoms</h2>
-                     <p>
-                         If you have COVID-19, or the symptoms, on the day of your vaccination appointment, do not go to the appointment.
-                          This is because you could spread the virus to others at the vaccination centre. 
-                     </p>
-                     <p>
-                         Get in touch with your vaccination centre, by message, phone or email to let them know you will not be attending 
-                         your appointment because you have COVID-19 symptoms.
-                     </p>
-                     <p>
-                        You can get vaccinated when it has been 14 days since you last experienced COVID-19 symptoms. 
-                     </p>
-                        
-                  <div class="about text-center">
-                     <div class="col-sm-12 py-5">
-                         <h1>At the vaccination centre</h1>
-                     </div>
-                  </div>
-                   <img class="imgs" src="../static/images/at the vaccination center.jpeg">
-                   <p>
-                       When waiting in line outside of the vaccination centre, and once you are inside:
+                      Tell your health provider, or vaccinator, if you have any health issues or are taking any medications,
+                       including any pain killers.
+               </p>
+               <h5>Cancel your appointment if you have COVID-19 or the symptoms</h5>
+               <p>
+                  If you have COVID-19, or the symptoms, on the day of your vaccination appointment, do not go to the appointment.
+                  This is because you could spread the virus to others at the vaccination centre. 
+             </p>
+             <p>
+                 Get in touch with your vaccination centre, by message, phone or email to let them know you will not be attending 
+                 your appointment because you have COVID-19 symptoms.
+             </p>
+             <p>
+                You can get vaccinated when it has been 14 days since you last experienced COVID-19 symptoms.
+               </p>
+   
+            </div>
+         </div>
+         <div class="columns image" style="background-image:url('../static/images/before\ vaccination.jpeg')">
+            &nbsp;
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns image" style="background-image:url('../static/images/at\ the\ vaccination\ center.jpeg')">
+            &nbsp;
+         </div>
+         <div class="columns content">
+            <div class="content-container">
+               <h1>At the vaccination centre</h1>
+               <p>
+                  When waiting in line outside of the vaccination centre, and once you are inside:
                    </p>
                    <p>
                       • Keep your mask on at all times.
@@ -119,43 +119,52 @@
                    </p>
                    <p>
                       • Don’t touch your face.
-                   </p>
-                   <div class="about text-center">
-                     <div class="col-sm-12 py-5">
-                         <h1>During vaccination</h1>
-                     </div>
-                  </div>
-                      <img class="imgs" src="../static/images/during vaccination.png">
-                      <p>
-                          All COVID-19 vaccines, regardless of the manufacturer, are administered in the same way.
-                           The vaccine will be injected into the muscle in your upper arm.
-                           It should take no longer than a few seconds and may cause a little pain.
-                      </p>
-                      <p>
-                          Keep your mask on during your appointment and turn your face away from the face of 
-                          the vaccinator — to help keep you both safe.
-                      </p>
-                      <p>
-                          If you are feeling nervous or anxious:
-                      </p>
-                      <p>
-                          • Remember that it is just a small prick that could save your life.
-                      </p>
-                      <p>
-                          • Take slow deep breaths. 
-                      </p>
-                      <p>
-                          • Look away from the needle.
-                      </p>
-                      <div class="about text-center">
-                     <div class="col-sm-12 py-5">
-                         <h1>After vaccination</h1>
-                     </div>
-                       </div>
-                      <img class="imgs" src="../static/images/after vaccination.jpeg">
-                     <h2>Expect minor side effects</h2>
-                     <p>
-                         After being vaccinated, some side effects are normal and expected.
+               </p>
+            </div>
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns content">
+            <div class="content-container">
+               <h1>During Vaccination</h1>
+               <p>
+                  All COVID-19 vaccines, regardless of the manufacturer, are administered in the same way.
+                  The vaccine will be injected into the muscle in your upper arm.
+                  It should take no longer than a few seconds and may cause a little pain.
+             </p>
+             <p>
+                 Keep your mask on during your appointment and turn your face away from the face of 
+                 the vaccinator — to help keep you both safe.
+             </p>
+             <p>
+                 If you are feeling nervous or anxious:
+             </p>
+             <p>
+                 • Remember that it is just a small prick that could save your life.
+             </p>
+             <p>
+                 • Take slow deep breaths. 
+             </p>
+             <p>
+                 • Look away from the needle.
+               </p>
+   
+            </div>
+         </div>
+         <div class="columns image" style="background-image:url('../static/images/during\ vaccination.png')">
+            &nbsp;
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns image" style="background-image:url('../static/images/after\ vaccination.jpeg')">
+            &nbsp;
+         </div>
+         <div class="columns content">
+            <div class="content-container">
+               <h1>After Vaccination</h1>
+               <h5>Expect minor side effects</h5>
+               <p>
+                  After being vaccinated, some side effects are normal and expected.
                           Side effects are a sign that your body is building immune protection. 
                      </p>
                      <p>
@@ -176,7 +185,7 @@
                      <p>
                         •  Joint pain or muscle ache
                      </p>
-                     <h2>Stay at the vaccination centre for the observation period</h2>
+                     <h5>Stay at the vaccination centre for the observation period</h5>
                      <p>
                          After being vaccinated you’ll need to stay in an observation area for 15-30 minutes.
                      </p>
@@ -208,7 +217,7 @@
                          Severe side effects, while very rare, are most likely to appear in the first 30 minutes after being vaccinated. 
                          Your stay in the observation area means qualified help is on hand in the unlikely event that you do experience any. 
                      </p>
-                     <h2>Prepare for your second vaccination appointment </h2>
+                     <h5>Prepare for your second vaccination appointment </h5>
                     <p>
                          Most COVID-19 vaccines need 2 doses to work.
                      This means you need to be vaccinated twice — with a gap of 4-12 weeks between the first and second dose.
@@ -219,43 +228,53 @@
                      <p>
                          It’s important that you get your second dose, even if you experienced side effects from the first —
                           unless a vaccination provider, or your doctor, tells you not to get the second dose.
-                     </p>
-                      <div class="about text-center">
-                     <div class="col-sm-12 py-5">
-                         <h1>Share & Celebrate</h1>
-                     </div>
-                       </div>
-                      <img class="imgs" src="../static/images/share and celebrate.jpg">
-                      <p>Being vaccinated is a huge moment and a huge relief — Enjoy! </p>
-                     <h2>Talk to others about your experiences</h2>
-                     <p>
-                         Encourage others to get vaccinated and talk about the process and how it made you feel.
-                     </p>
-                     <h2>Registration for the vaccine:</h2>
-                     <p>
-                         Here are simple steps for registration:
-                     </p>
-                     <p>
-                        1. Use your mobile number and a valid photo ID, such as your Aadhar card, to register by entering your details.
-                     </p>
-                     <p>
-                        2. Select a vaccine center for vaccination.
-                     </p>
-                     <p>
-                        3. Book your time slot for the vaccine and confirm your appointment.
-                     </p>
-                     <p>
-                        4. You will be notified on your registered mobile number about the date, time, and name of the vaccination center.
-                     </p>
-                     
-                     <a href="https://selfregistration.cowin.gov.in/" class="btn1">Book now</a>
-                     
-                        </div>
-                      </div>
-                   </div>
-                  </div>                    
-                </div>
+               </p>
             </div>
-        </div> 
-
-</body>
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns content">
+            <div class="content-container">
+               <h1>Share & Celebrate</h1>
+               <p>Being vaccinated is a huge moment and a huge relief — Enjoy! </p>
+                  <h5>Talk to others about your experiences</h5>
+                  <p>
+                      Encourage others to get vaccinated and talk about the process and how it made you feel.
+                  </p>
+   
+            </div>
+         </div>
+         <div class="columns image" style="background-image:url('../static/images/share\ and\ celebrate.jpg')">
+            &nbsp;
+         </div>
+      </div>
+      <div class="section-container">
+         <div class="columns image" style="background-image:url('../static/images/vac\ reg.jpg')">
+            &nbsp;
+         </div>
+         <div class="columns content">
+            <div class="content-container">
+               <h1>Registration for the vaccine:</h1>
+               <p>
+                  Here are simple steps for registration:
+               </p>
+               <p>
+                  1. Use your mobile number and a valid photo ID, such as your Aadhar card, to register by entering your details.
+               </p>
+               <p>
+                  2. Select a vaccine center for vaccination.
+               </p>
+               <p>
+                  3. Book your time slot for the vaccine and confirm your appointment.
+               </p>
+               <p>
+                  4. You will be notified on your registered mobile number about the date, time, and name of the vaccination center.
+                 
+               </p>
+               
+               <a href="https://selfregistration.cowin.gov.in/" class="btn1">Book now</a>
+            </div>
+         </div>
+      </div>
+   </body>
+</html>
