--- a/public/view/vaccine.hbs
+++ b/public/view/vaccine.hbs
@@ -31,6 +31,9 @@
                <P>It can be useful to remember that by getting vaccinated you are not only protecting yourself from COVID-19,
                   but also your loved ones around you.
                </p>
+ <P>
+              <h5>Eligibility for the vaccine: </h5> According to the current vaccination status in India, anybody above the age of 18 can get vaccinated from the 1st of May 2021.
+           </P>
             </div>
          </div>
       </div>
@@ -41,7 +44,7 @@
                  <h5>Do your research</h5>
                <p>
                   • Learn more about the different types of COVID-19 vaccines and how they work and how
-                  vaccinations are being rolled out in South Asia.
+                  vaccinations are being rolled out in South Asia. In INDIA, two pharmaceutical companies brought their vaccines to the Indian markets. Serum Institute of India launched ‘Covishield,’ and Bharat Biotech introduced ‘Covaxin.’ The imported brand Sputnik V recently received approval for use in India. 
              </p>
              <p>
                 • Make sure you’re relying on accurate vaccine information by checking that it comes from a trustworthy source,
