--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -20,7 +20,10 @@
           <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="helpsection">HELP</a>
+          <a class="nav-link font-weight-bold text-white " href="helpsection">AID</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link font-weight-bold text-white " href="space">#YOURSPACE</a>
         </li>
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
