--- a/public/view/space.hbs
+++ b/public/view/space.hbs
@@ -17,13 +17,23 @@
 <!------ Include the above in your HEAD tag ---------->
 <div class="container">
          <div id="home_quicklinks">
-                              
-
-                                <a class="quicklink link2" href="org">
+                                <a class="quicklink link1" href="comment">
                                     <span class="ql_caption">
                                         <span class="outer">
                                             <span class="inner">
-                                                <h2>Covid Relief Organisations</h2>
+                                                <h2>Help each other</h2>
+                                            </span>
+                                        </span>
+                                    </span>
+                                    <span class="ql_top"></span>
+                                    <span class="ql_bottom"></span>
+                                </a>
+
+                                <a class="quicklink link2" href="yourspace">
+                                    <span class="ql_caption">
+                                        <span class="outer">
+                                            <span class="inner">
+                                                <h2>Share you story</h2>
                                             </span>
                                         </span>
                                     </span>
@@ -32,17 +42,7 @@
                                 </a>
 
 
-                                <a class="quicklink link3" href="mentalhelporg">
-                                    <span class="ql_caption">
-                                        <span class="outer">
-                                            <span class="inner">
-                                                <h2>Mental Help Organisations</h2>
-                                            </span>
-                                        </span>
-                                    </span>
-                                    <span class="ql_top"></span>
-                                    <span class="ql_bottom"></span>
-                                </a>                
+                                           
                   <div class="clear"></div>                         
           </div>     
 </div>
