--- a/public/view/space.hbs
+++ b/public/view/space.hbs
@@ -33,7 +33,7 @@
                                     <span class="ql_caption">
                                         <span class="outer">
                                             <span class="inner">
-                                                <h2>Share you story</h2>
+                                                <h2>Share your story</h2>
                                             </span>
                                         </span>
                                     </span>
