--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -13,12 +13,13 @@
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white " href="content">GUIDELINES</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="aboutcovid">ABOUT</a>
-        </li>
-        <li class="nav-item">
+         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link font-weight-bold text-white " href="aboutcovid">HOSPITALS</a>
+        </li>
+       
         <li class="nav-item">
           <a class="nav-link font-weight-bold text-white " href="helpsection">AID</a>
         </li>
@@ -26,7 +27,7 @@
           <a class="nav-link font-weight-bold text-white " href="space">#YOURSPACE</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white" href="https://zxpagcfxuab.typeform.com/to/g9gt1jAS">CONTACT</a>
+          <a class="nav-link font-weight-bold text-white" href="https://3qkc0wb6u7o.typeform.com/to/xJVaHelm">CONTACT</a>
         </li>
       </ul>
     </div>
