--- a/public/view/aboutcovid.hbs
+++ b/public/view/aboutcovid.hbs
@@ -28,7 +28,7 @@
     </div>
     <div class="card">
       <div class="box box3">
-        <p> Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. </p>
+        <p>  Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. </p>
         <a href="postcovid" class="btn1">Post Covid19</a>
       </div>
       <div class="bg"></div>
