--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -45,10 +45,10 @@
     <!-- GET STARTED BUTTON -->
     <div class="row">
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
-      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="https://covidwarriors.gov.in/covid_Hospital_statewise.aspx?orgid=59"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; color:aliceblue; background-color: #181817;"><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
+      <div class="col-sm-4 col-md-4 col-lg-4 text-center"><a href ="aboutcovid"><button class="button slide-in-elliptic-left-fwd" style="margin-top: 250px; width: 250px; height:50px; border-radius: 25px; color:aliceblue; background-color: #181817;"><span class="txt font-weight-bolder">GET STARTED   <i class="fas fa-arrow-right"></i> </span></button></a></div>
       <div class="col-sm-4 col-md-4 col-lg-4"></div>
     </div>
-    <!-- GET STARTED BUttON END -->
+    {{!-- <!-- GET STARTED BUttON END --> https://covidwarriors.gov.in/covid_Hospital_statewise.aspx?orgid=59 --}}
   <!-- </div> -->
     <h2 class="mid-text text-white font-weight-bold text-center">STAY HOME <i class="fas fa-home"></i> STAY SAFE <i class="fas fa-user-shield"></i></h2>
   </div>
