--- a/public/view/letshelpeachother.hbs
+++ b/public/view/letshelpeachother.hbs
@@ -13,9 +13,12 @@
 
 <body style="background-color: rgb(74, 247, 189);">
     {{>header}}
+
     <div class="container" >
         <div class="row mt-4">
             <div class="col-md-12">
+               <a class="but" href="https://3qkc0wb6u7o.typeform.com/to/rWKiGBkb"> <button>Ask for help</button> </a>
+               <a class ="but" href="https://3qkc0wb6u7o.typeform.com/to/E9yPjKcO"> <button>Volunteer to help</button> </a>
                 <h4><strong>Let's Help each other</strong></h4>
                 <p>Ask your queries and get your answers</p>
             </div>
