--- a/public/static/css/vaccine.css
+++ b/public/static/css/vaccine.css
@@ -131,7 +131,7 @@ padding:20px 35px;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
-    background-color:#08e41a;
+    background-color:#5fb0e6;
     border: 2px solid #121213;
     border-radius: 0.6em;
     color: #121213;
@@ -143,6 +143,7 @@ padding:20px 35px;
     -webkit-align-self: center;
         -ms-flex-item-align: center;
             align-self: center;
+        
     font-size: 1rem;
     font-weight: 400;
     line-height: 1;
@@ -167,5 +168,5 @@ padding:20px 35px;
     transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
   }
   .btn2:hover {
-    box-shadow: 0 0 40px 40px #fbff1b inset;
+    box-shadow: 0 0 40px 40px #1b7eff inset;
   }
