--- a/public/partials/header.hbs
+++ b/public/partials/header.hbs
@@ -17,7 +17,7 @@
           <a class="nav-link font-weight-bold text-white " href="#status">STATUS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold text-white " href="aboutcovid">HOSPITALS</a>
+          <a class="nav-link font-weight-bold text-white " href="hospitals">HOSPITALS</a>
         </li>
        
         <li class="nav-item">
