--- a/public/static/css/content.css
+++ b/public/static/css/content.css
@@ -32,6 +32,7 @@ body {
   background: #f2f2f2;
   overflow: hidden;
   transition: all 0.5s ease-in;
+  border-radius: 30px;
   z-index: 2;
   box-sizing: border-box;
   padding: 30px;
