--- a/public/static/css/hospital.css
+++ b/public/static/css/hospital.css
@@ -25,6 +25,7 @@ body{
     width:300px;
     height:400px;
     margin:0 auto;
+    border-radius: 50px;
     background:#fff;
     transition: 0.5s;
 } 
