--- a/public/view/tile.hbs
+++ b/public/view/tile.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">
+        <div class="box row">
              <div class="imgBox">
                 <img class="imgs" src="../static/images/vitamin a.jpeg">
              </div>
