--- a/public/view/hospital.hbs
+++ b/public/view/hospital.hbs
@@ -32,7 +32,7 @@
           <div class="content">
             <h2>State Government</h2>
             <p>The list of hospitals earmarked by the States/UTs along with the State specific help line numbers.</p>
-            <a href="state.hbs">Know More</a>
+            <a href="statehospital">Know More</a>
           </div>
         </div>
         <div class="face face2">
