--- a/public/view/statehospital.hbs
+++ b/public/view/statehospital.hbs
@@ -89,7 +89,7 @@ section::after {
         <a href="http://arogyakeralam.gov.in/2020/03/25/guidelines/"><h5>17. Kerala  :</h5></a>0471-2552056
         <a href="https://leh.nic.in/notice/covid19-hospital/"><h5>18. Ladakh  :</h5></a>01982256462 
         <a href="https://cdn.s3waas.gov.in/s358238e9ae2dd305d79c2ebc8c1883422/uploads/2020/05/2020051228-1.pdf"><h5>19. Lakshadweep :</h5></a>104
-        <a href="https://www.nhmmp.gov.in/CovidInformation.aspx"><h5>20. Madhya Pradesh :</h5></a>104
+        <a href="http://health.mp.gov.in/en"><h5>20. Madhya Pradesh :</h5></a>104
         <a href="https://arogya.maharashtra.gov.in/1177/Dedicat
         ed-COVID-Facilities-Status"><h5>21. Maharashtra :</h5></a>020-26127394 
         <a href="http://nrhmmanipur.org/?page_id=2602"><h5>22. Manipur :</h5></a>3852411668
