--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -131,7 +131,7 @@
     <div class="row p-md-3 px-md-1">
       <div class="  col-md-6" style="background-color:rgb(0, 255, 174); height: 400px;">
       <p class="in_world text-center font-weight-bold">WORLD</p>
-      <p class="world_status text-center">New Cases: +{{WorldActive}} </p>
+      <p class="world_status text-center">New Cases: {{WorldActive}} </p>
       <p class="world_status text-center">Last Update: {{WorldLastUpdate}} </p>
       {{!-- <p class="world_status text-center">New Cases: {{WorldNewCases}} </p> --}}
       <p class="world_status text-center">Total Cases: {{WorldTotalCases}} </p>
