--- a/public/view/space.hbs
+++ b/public/view/space.hbs
@@ -29,7 +29,7 @@
                                     <span class="ql_bottom"></span>
                                 </a>
 
-                                <a class="quicklink link2" href="yourspace">
+                                <a class="quicklink link2" href="YourSpace">
                                     <span class="ql_caption">
                                         <span class="outer">
                                             <span class="inner">
